# alpaka

example/: CMakeLists.txt
example/heatEquation2D/: CMakeLists.txt
example/heatEquation2D/src/: BoundaryKernel.hpp  InitializeBufferKernel.hpp  StencilKernel.hpp  analyticalSolution.hpp  heatEquation2D.cpp  helpers.hpp  pngCreator.hpp  simulationDefines.hpp  writeImage.hpp
example/rgVecAdd/: CMakeLists.txt
example/rgVecAdd/src/: rgMemCpy.hpp  rgVectorAdd.cpp
include/alpaka/wait/: Traits.hpp
